--- a/chat-ui/index.html
+++ b/chat-ui/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <script type="text/javascript" id="app-interact" src="chat-io/js/chat-io.js" 
-    data-sentinelid = "urn:uuid:c742d5fc-8e99-4f8a-9c8d-a5eec69607f7"
-    data-walkername = "talker"
-    data-token = "51bed350c219aa86688ee0b09a81f0fed6b8bf24f120e35fd6bbc85b20420428"
+    data-sentinelid = "urn:uuid:0f15b85c-49e3-472d-bfd3-41cda8a37ca8"
+    data-walkername = "talk"
+    data-token = "fb0fa6a1b04431ec06a6fb8b055a0d1ea77f42e6f30026a66601e14898f58f13"
     data-server = "http://localhost:8000"
     ></script>
   </body>
